# missing-translation-app

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-run.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  transqa.toml  whitelist.txt
.github/workflows/: vue-deploy.yml
examples/: urls.txt
landing-page-app/: DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.vue  README-DEPLOY.md  README-VUE.md  README.md  configure-apache.sh  configure-nginx.sh  deploy-production.sh  deploy-simple.sh  deploy-vue.sh  docker-compose.prod.yml  docker-compose.unified.yml  docker-compose.vue.yml  docker-compose.yml  env.example  monitor-transqa.sh  quick-deploy.sh  requirements-web.txt  setup-ssl.sh  start-web.sh  test-api.py
landing-page-app/api/: __init__.py  main.py  models.py
landing-page-app/nginx/: default.conf  nginx.conf  vue.conf
landing-page-app/static/images/: README.md
landing-page-app/static/js/: main.js
landing-page-app/templates/: index.html
landing-page-app/vue-frontend/: README.md  index.html  package.json  vite.config.js
landing-page-app/vue-frontend/.github/workflows/: deploy.yml
landing-page-app/vue-frontend/src/: App.vue  main.js
landing-page-app/vue-frontend/src/assets/css/: main.css
landing-page-app/vue-frontend/src/components/: AnalysisResults.vue  DemoSection.vue  FeaturesSection.vue  FooterSection.vue  HeroSection.vue  NavBar.vue
landing-page-app/vue-frontend/src/composables/: useTransQA.js
landing-page-app/vue-frontend/src/services/: transqaApi.js
landing-page-app/vue-frontend/src/views/: Home.vue
src/transqa/: __init__.py  __main__.py
src/transqa/cli/: __init__.py  __main__.py  main.py
src/transqa/core/: __init__.py  analyzer.py  interfaces.py
src/transqa/core/extractors/: __init__.py  base.py  factory.py  html_extractor.py
src/transqa/core/fetchers/: __init__.py  base.py  factory.py  playwright_fetcher.py  requests_fetcher.py
src/transqa/core/language/: __init__.py  base.py  composite_detector.py  factory.py  fasttext_detector.py  langid_detector.py
src/transqa/core/verification/: __init__.py  base.py  composite_verifier.py  factory.py  heuristic_verifier.py  languagetool_verifier.py  placeholder_validator.py
src/transqa/ui/: __init__.py
src/transqa/utils/: __init__.py
tests/: __init__.py
